--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Book search</string>
 
     <string name="search">Поиск</string>
+    <string name="no_book">Нужная книга всегда найдётся</string>
+    <string name="separator">,</string>
 </resources>
