Add book details screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="search_by_genre">По жанру</string>
     <string name="search_by_publisher">По издателю</string>
 
+    <string name="description">Описание</string>
+
 </resources>
